[project]
name = "example_package_daniel.oros"
version = "0.0.1"
authors = [
  { name="Daniel Oros", email="daniel.oros.23@pnu.edu.ua" },
]
description = "Прикольна лаба"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/DanielOrosPNU/lab4"
Issues = "https://github.com/DanielOrosPNU/lab4/issues"
